# neural_net

./: .gitignore  CMakeLists.txt
include/: Activations.h  ConvPoolLayer.h  Convolution.h  CostFunction.h  CrossEntropyCostFunction.h  DataLoader.h  FeatureMapLayer.h  FullyConnectedLayer.h  MNISTLoader.h  MatrixOperations.h  MaxPoolLayer.h  NeuralNetwork.h  NeuronLayer.h  QuadraticCostFunction.h  Types.h
src/: Activations.cpp  ConvPoolLayer.cpp  CrossEntropyCostFunction.cpp  FeatureMapLayer.cpp  FullyConnectedLayer.cpp  MNISTLoader.cpp  MatrixOperations.cpp  MaxPoolLayer.cpp  NeuralNetwork.cpp  QuadraticCostFunction.cpp  tu_neural_net.cpp
